infra/kustomize/be/manifests/prod.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: be-ap-svc
  name: be-ap-svc
  namespace: app-a
spec:
  ports:
  - name: be-ap-port
    port: 9011
    protocol: TCP
    targetPort: 9011
  selector:
    app: be-ap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-ap
  namespace: app-a
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: be-ap
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: be-ap
      name: be-ap
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: be-ap-config
        - secretRef:
            name: be-ap-secret
        image: t3goto/be-ap:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - ls
            - /usr/local/bin/node
          failureThreshold: 10
          initialDelaySeconds: 0
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: be-ap
        ports:
        - containerPort: 9011
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:9011
          failureThreshold: 10
          initialDelaySeconds: 0
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 150m
            memory: 150Mi
          requests:
            cpu: 10m
            memory: 10Mi
        startupProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:9011
          failureThreshold: 100
          initialDelaySeconds: 0
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: be-ap-dr
  namespace: app-a
spec:
  host: be-ap-svc.app-a.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: be-ap-vs-mesh
  namespace: app-a
spec:
  hosts:
  - be-ap-svc.app-a.svc.cluster.local
  http:
  - route:
    - destination:
        host: be-ap-svc.app-a.svc.cluster.local
        port:
          number: 9011
